16.08.2012 version 0.9.37
    - resizeable SVG shapes. It is now possible to resize the native "SVG" shapes as well
    - remove double call of the commit callback in the LabelInplaceEditor
    - enable InplaceEdit for labels attached to normals shapes
    - Unbind the click callback of the <body> element after the inline editor dies        

16.07.2012 version 0.9.36
    - rename class graphiti.EditPolcy to graphiti.command.CommandType
    - concept for drag&drop and other edit constraint handling: graphiti.policy.EditPolicy
    - new class DragDropEditPolicy
    - new class RegioEditPolicy
    - new class HorizontalEditPolicy
    - new class VerticalEditPolicy
    - new example for EditConstraint usage "edit_policy_constraint"

12.07.2012 version 0.9.35
    - new Locator for shape decorations. LeftLocator, RightLocator and CenterLocator.
    - Provide the onClick and onDoubleCLick events for the children/decoration of a shape as well. Children can now
      handle this events in its own callback method.
    - buildin editor for Labels. see package graphiti.ui.LabelEditor and the examples
      connection_labeledit_dialog and connection_label_edit_inplace
    - fix bug in the JSON serialization. Use good defaults if some attributes are missing
    - new example connection_label_edit_inplace
    - drop code for unfinished MVC pattern. Not good enough for production. Rewrite
      if required.
    - avoid DivionByZero in Sparkline if the widget contains no data

09.07.2012 version 0.9.34
    - new example 'shape_add_port_via_api' to show the handling of a 'Locator' and 
      handling of dynamic ports.
    - new shape "graphiti.shape.basic.Diamond"
    - consider the z-order of the shapes in the hitTest for 
      drag/drop operation
    - new method Figure.getZOrder. 
    - fixing broken reference in jsDoc
	
27.06.2012 version 0.9.33
    - provide a method to export/import shape specific attributes.
      Inspect './examples/io_json_extend/' for details.
      