@@ -141,7 +141,15 @@ var jsonDocument =
         "width": 50,
         "height": 50,
         "radius": 2
-      }
+      },
+      {
+          "type": "graphiti.shape.analog.OpAmp",
+          "id": "ebfb35bb-5767-8155-c804-14bd48789dc2",
+          "x": 72,
+          "y": 45,
+          "width": 100,
+          "height": 100
+        }
     ];
                 
 $(document).ready(function() {
