@@ -1075,15 +1075,15 @@ graphiti.Figure = Class.extend({
             x     : this.x,
             y     : this.y,
             width : this.width,
-            height: this.height,
-            children: []
+            height: this.height
         };
+        /*
         this.children.each(function(i, element){
             var childMemento = element.figure.getPersistentAttributes();
             childMemento.locator = element.locator.NAME;
             memento.children.push(childMemento);
         });
-
+       */
         return memento;
     },
     
@@ -1101,7 +1101,7 @@ graphiti.Figure = Class.extend({
         this.y     = memento.y;
         
         // width and height are optional parameter for the JSON stuff.
-        // We use the defaults are the attributes not present
+        // We use the defaults if the attributes not present
         if(typeof memento.width !== "undefined"){
             this.width = memento.width;
         }
