@@ -19,12 +19,15 @@ graphiti.SetFigure = graphiti.shape.basic.Rectangle.extend({
     init: function( width, height) {
       // collection of SVG DOM nodes
       this.svgNodes=null;
-      this.originalWidth = 1;
-      this.originalHeight= 1;
+      
+      this.originalWidth = null;
+      this.originalHeight= null;
+      
+      this.scaleX = 1;
+      this.scaleY = 1;
       
       this._super( width, height);
 
- //     this.setResizeable(false);
       this.setStroke(0);
       this.setBackgroundColor(null); 
     },
@@ -49,26 +52,35 @@ graphiti.SetFigure = graphiti.shape.basic.Rectangle.extend({
  
     /**
      * @method
-     * propagate all attributes like color, stroke,... to the shape element
+     * propagate all attributes like color, stroke,... to the shape element and
+     * repaint them.
+     * 
      **/
     repaint : function(attributes)
     {
-        var scaleX =  this.width / this.originalWidth;
-        var scaleY =  this.height / this.originalHeight;
-        
-        if(this.repaintBlocked===true || this.shape===null){
+        if (this.originalWidth !== null) {
+            this.scaleX = this.width / this.originalWidth;
+            this.scaleY = this.height / this.originalHeight;
+        }
+
+        if (this.repaintBlocked === true || this.shape === null) {
             return;
         }
-        
+
         if (typeof attributes === "undefined") {
             attributes = {};
         }
-        
-        if(this.svgNodes!==null){
-            
-            this.svgNodes.transform("s"+scaleX+","+scaleY+","+this.getAbsoluteX()+","+this.getAbsoluteY()+" t"+this.getAbsoluteX()+","+this.getAbsoluteY());
+
+        if (this.svgNodes !== null) {
+            if (this.isResizeable() === true) {
+                this.svgNodes.transform("s"+this.scaleX+","+this.scaleY+","+this.getAbsoluteX()+","+this.getAbsoluteY()+ " t"
+                        + this.getAbsoluteX() + "," + this.getAbsoluteY());
+            }
+            else {
+                this.svgNodes.transform("t" + this.getAbsoluteX() + "," + this.getAbsoluteY());
+            }
         }
-        
+
         this._super(attributes);
     },
 
@@ -77,16 +89,13 @@ graphiti.SetFigure = graphiti.shape.basic.Rectangle.extend({
      */
     createShapeElement : function()
     {
-       // NOTE: don't change the order of the two calles. This defines the z-oder in the canvas.
-       // The "set" should always be on top.
+       // NOTE: don't change the order of the two calls. This defines the z-oder in the canvas.
+       // The "set" must always be on top.
        var shape= this.canvas.paper.rect(this.getX(),this.getY(),this.getWidth(), this.getHeight());
        this.svgNodes = this.createSet();
        
        this.originalWidth = this.svgNodes.getBBox().width;
        this.originalHeight= this.svgNodes.getBBox().height;
-       
-       this.width  = this.originalWidth;
-       this.height = this.originalHeight;
 
        return shape;
     },
